# zero2prod

./: Cargo.toml  Dockerfile  Makefile  README.md  configuration.yaml  tarpaulin.toml
.cargo/: config.toml
.github/: general.yml
.github/workflows/: coverage.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  routes.rs  shuttle.rs  startup.rs  todo.md  validators.rs
src/routes/: subscriptions.rs
tests/: health_check_test.rs
tests/integration/: common.rs  main.rs  status_test.rs  subscribe_test.rs  subscription_test.rs
tests/integration/common/: assertions.rs  mod.rs  test_client.rs
