[package]
name = "zero2production"
version = "0.1.0"
edition = "2021"
default-run = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"
name = "zero2prod"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[[bin]]
path = "src/shuttle.rs"
name = "zero2production"

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
chrono = "0.4.34"
config = "0.14.0"
rstest = "0.18.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
futures = "0.3.30"
reqwest = "0.11.24"
rstest = "0.18.2"
